src/test/deca/syntax/invalid/homemade/test/test_pars_inv_type_contient_symbole_special.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le type
//
// Resultats:
//    Ligne 12 : Erreur (type contient un symbole spécial)
//    
//
// Historique:
//    cree le 04/01/2023

{
   in&t x = 1;
}